--- a/backups/home.html
+++ b/backups/home.html
@@ -1,15 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.7.0/css/all.css' integrity='sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ' crossorigin='anonymous'> -->
-    <script src="metahead.js"></script>
-</head>
 <title>Home</title>
-<script src="css.js"></script>
-<!-- <style>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
 * {
   box-sizing: border-box;
   font-family: Arial, Helvetica, sans-serif;
@@ -50,7 +45,6 @@ nav {
     padding: 20px;
 }
 
-
 /* Style the list inside the menu */
 nav ul {
     list-style-type: none;
@@ -74,7 +68,12 @@ section:after {
 }
 
 /* Style the footer */
-
+footer {
+    background-color: #777;
+    padding: 10px;
+    text-align: center;
+    color: white;
+}
 
 @media (max-width: 600px) {
     nav, article {
@@ -85,20 +84,11 @@ section:after {
 
 header {
     background-color: rgb(255, 94, 0);
-    padding: 5px;
+    padding: 30px;
     text-align: center;
-    font-size: 25px;
+    font-size: 35px;
     color: white;
 }
-/* .footer {
-   position: fixed;
-   left: 0;
-   bottom: 0;
-   width: 100%;
-   background-color: white;
-   color: black;
-   text-align: center;
-} */
 
 /* Style the top navigation bar */
 .topnav {
@@ -174,7 +164,14 @@ header {
 .dropdown:hover .dropdown-content {
   display: block;
 
-</style> -->
+
+
+
+
+
+
+</style>
+</head>
 
 <header>
   <h2>Aashutosh Taikar</h2>
@@ -183,24 +180,15 @@ header {
 <body>
 
 <div class="topnav">
-  <a href="index.html" target="_self" <i class='fas fa-home'></i> Home</a>
+  <a href="index.html" target="_self">Home</a>
+  <a href="projects.html" target="_self">Projects</a>
   <div class="dropdown">
-    <button class="dropbtn">Projects <i class='fas fa-project-diagram'></i>
-      <i class="fa fa-caret-down"></i>
-    </button>
-    <div class="dropdown-content">
-      <a href="projects_CS.html" target="_self">Projects(Software)</a>
-      <a href="projects_EE.html" target="_self">Projects(Hardware)</a>
-    </div>
-  </div> 
-  
-  <div class="dropdown">
-    <button class="dropbtn">Resume <i class='fab fa-dochub'></i>
+    <button class="dropbtn">Resume 
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
       <a href="ResumeCS.pdf" target="_self">Resume(Software Engineer)</a>
-      <a href="ResumeEE.pdf" target="_self">Resume(Analog Design Engineer)</a>
+      <a href="ResumeEE.pdf" target="_self">Resume(Mixed Signal)</a>
     </div>
   </div> 
 </div>
@@ -210,9 +198,9 @@ header {
 <section>
   <nav>
     <ul>
-      <li><a href="https://github.com/aashutoshtaikar/" target="https://github.com/aashutoshtaikar/">GitHub <i class='fab fa-github'></i></a></li><br>
-      <li><a href="https://www.linkedin.com/in/aashutoshtaikar/" target="https://www.linkedin.com/in/aashutoshtaikar/">LinkedIn <i class='fab fa-linkedin'></i> </a></li><br>
-      <li><a href="mailto:ataikar@outlook.com"> ataikar@outlook.com <i class="material-icons">email</i></a></li><br>
+      <li><a href="https://github.com/aashutoshtaikar/" target="https://github.com/aashutoshtaikar">GitHub</a></li><br>
+      <li><a href="https://www.linkedin.com/in/aashutoshtaikar/" target="https://www.linkedin.com/in/aashutoshtaikar/">LinkedIn</a></li><br>
+      <li><a href="mailto:ataikar@outlook.com">Email:ataikar@outlook.com</a></li><br>
     </ul>
   </nav>
 
@@ -227,7 +215,6 @@ header {
     <p>(2015) I worked as a Network Operations Center Support Engineer at Continuum Managed Solutions, Mumbai, India which gave me a good hands-on with troubleshooting and maintaining Windows servers by checking the system event logs and starting/stopping required network services. During my Bachelor’s we implemented a project Farm-Bot in which I was responsible to design the circuit, programing the microcontroller for automation of the Bot.</p> <br>  
 </article>
 </section>
-
 
 
 </body>
