--- a/projects_CS.html
+++ b/projects_CS.html
@@ -1,143 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>CSS Template</title>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-* {
-  box-sizing: border-box;
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-body {
-  margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-/* Create two columns/boxes that floats next to each other */
-nav {
-    float: left;
-    width: 30%;
-    /*height: 900px;  only for demonstration, should be removed */
-    background: #ccc;
-    padding: 20px;
-}
-
-/* Style the list inside the menu */
-nav ul {
-    list-style-type: none;
-    padding: 0;
-}
-
-article {
-    float: left;
-    padding: 20px;
-    width: 70%;
-    background-color: #f1f1f1;
-   /*  height: 900px; only for demonstration, should be removed */
-}
-
-header {
-    background-color: darkorange;
-    padding: 30px;
-    text-align: center;
-    font-size: 35px;
-    color: white;
-}
-
-/* Style the top navigation bar */
-.topnav {
-  overflow: hidden;
-  background-color: #333;
-}
-
-/* Style the topnav links */
-.topnav a {
-  float: left;
-  display: block;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-}
-
-/* Change color on hover */
-.topnav a:hover {
-  background-color: red;
-  color: black;
-}
-
-/* Style the content */
-.content {
-  background-color: #ddd;
-  padding: 10px;
-  height: 200px; /* Should be removed. Only for demonstration */
-}
-
-.dropdown {
-  float: left;
-  overflow: hidden;
-}
-
-.dropdown .dropbtn {
-  font-size: 16px;  
-  border: none;
-  outline: none;
-  color: white;
-  padding: 14px 16px;
-  background-color: inherit;
-  font-family: inherit;
-  margin: 0;
-}
-
-.navbar a:hover, .dropdown:hover .dropbtn {
-  background-color: red;
-}
-
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f9f9f9;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-}
-
-.dropdown-content a {
-  float: none;
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-  text-align: left;
-}
-
-.dropdown-content a:hover {
-  background-color: #ddd;
-}
-
-.dropdown:hover .dropdown-content {
-  display: block;
-
-
-/* Style the footer */
-footer {
-    background-color: #777;
-    padding: 10px;
-    text-align: center;
-    color: white;
-}
-
-@media (max-width: 600px) {
-    nav, article {
-        width: 100%;
-        height: auto;
-    }
-}
+    <script src="metahead.js"></script>
+  </head>
+    <title>Projects</title>
+    <script src="css.js"></script>
 
 </style>
-</head>
+
 
 <header>
   <h2>Projects</h2>
@@ -145,16 +15,25 @@ footer {
 
 <body>
 
-<div class="topnav">
-  <a href="index.html" target="_self">Home</a>
-  <a href="projects.html" target="_self">Projects</a>
+    <div class="topnav">
+  <a href="index.html" target="_self" <i class='fas fa-home'></i> Home</a>
   <div class="dropdown">
-    <button class="dropbtn">Resume 
+    <button class="dropbtn">Projects <i class='fas fa-project-diagram'></i>
+      <i class="fa fa-caret-down"></i>
+    </button>
+    <div class="dropdown-content">
+      <a href="projects_CS.html" target="_self">Projects(Software)</a>
+      <a href="projects_EE.html" target="_self">Projects(Hardware)</a>
+    </div>
+  </div> 
+  
+  <div class="dropdown">
+    <button class="dropbtn">Resume <i class='fab fa-dochub'></i>
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
       <a href="ResumeCS.pdf" target="_self">Resume(Software Engineer)</a>
-      <a href="ResumeEE.pdf" target="_self">Resume(Mixed Signal)</a>
+      <a href="ResumeEE.pdf" target="_self">Resume(Analog Design Engineer)</a>
     </div>
   </div> 
 </div>
@@ -164,9 +43,9 @@ footer {
 <section>
   <nav>
     <ul>
-      <li><a href="https://github.com/aashutoshtaikar/" target="https://github.com/aashutoshtaikar">GitHub</a></li><br>
-      <li><a href="https://www.linkedin.com/in/aashutoshtaikar/" target="https://www.linkedin.com/in/aashutoshtaikar/">LinkedIn</a></li><br>
-      <li><a href="mailto:ataikar@outlook.com">Email:ataikar@outlook.com</a></li><br>
+      <li><a href="https://github.com/aashutoshtaikar/" target="https://github.com/aashutoshtaikar/">GitHub <i class='fab fa-github'></i></a></li><br>
+      <li><a href="https://www.linkedin.com/in/aashutoshtaikar/" target="https://www.linkedin.com/in/aashutoshtaikar/">LinkedIn <i class='fab fa-linkedin'></i> </a></li><br>
+      <li><a href="mailto:ataikar@outlook.com"> ataikar@outlook.com <i class="material-icons">email</i></a></li><br>
     </ul>
   </nav>
 
@@ -194,6 +73,7 @@ Created a program to compute the number of times items in pair were purchased fr
 <p>Created Schematics and Code for 8-bit micro-controller for actuation of a prototype bot which can perform basic farming functions for acquiring data from IR sensor using ADC and controlling motor driver ICs by PWM. </p>
 </article>
 </section>
+
 
 
 </body>
